fix deprecated of Long ctor